--- a/teaching.html
+++ b/teaching.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title> Rodrigo Aldana-López - Publications </title>
+      <title> Rodrigo Aldana-López - Teaching </title>
       <!-- stylesheets -->
       <link rel="stylesheet" href="/css/site.css">
       <link media="all" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
@@ -41,103 +41,55 @@
       <div id="blue">
          <div class="container">
             <div class="row">
-               <h3>Publications</h3>
+               <h3>Teaching</h3>
             </div>
             <!-- /row -->
          </div>
          <!-- /container -->
       </div>
       <!-- /blue -->
-      <h1 class="tittle">
-         <center>Journal articles</center>
-      </h1>
       <br><br>
       <div class="container">
          <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
-               <h3 class="big">Autonomous navigation of UAVs</h3>
-               <hr>
-               <br>
-               <div class="pub_list">
-                  <p align="justify">Leobardo Campos-Macías, <b>Rodrigo Aldana-López</b>, Rafael de la Guardia, José I. Parra-Vilchis, David Gómez-Gutiérrez, “<b>Autonomous navigation of MAVs in unknown cluttered environments</b>”. <i>Journal of Field Robotics</i>, 2020.<br>
-                     [<a style="color:blue" href="publications/jfr2020.pdf">pdf</a> | <a style="color:blue" href="publications/jfr2020.txt">bibtex</a> | <a style="color:blue" href="https://www.youtube.com/watch?v=Wq0e7vF6nZM&feature=youtu.be">video</a> | <a style="color:blue" href="https://arxiv.org/abs/1906.08839">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21959">publisher link</a>]
-                  </p>
-                  <br>
-                  <p align="justify">Leobardo Campos-Macías, David Gómez-Gutiérrez, <b>Rodrigo Aldana-López</b>, Rafael de la Guardia, José I. Parra-Vilchis, “<b>A Hybrid Method for Online Trajectory Planning of Mobile Robots in Cluttered Environments</b>”. <i>IEEE Robotics and Automation Letters</i>, 2017.<br>
-                     [<a style="color:blue" href="publications/ral2017.pdf">pdf</a> | <a style="color:blue" href="publications/ral2017.txt">bibtex</a> | <a style="color:blue" href="https://www.youtube.com/watch?v=DJ1IZRL5t1Q&t=1s">video</a> | <a style="color:blue" href="https://arxiv.org/abs/1908.08493">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/7822897">publisher link</a>]
-                  </p>
-                  <br>
-               </div>
-               <h3 class="big">Multi-agent systems</h3>
-               <hr>
-               <br>
-               <div class="pub_list">
-                  <p align="justify">Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Precise Dynamic Consensus under Event-Triggered Communication</b>”. <i>Machines, invited paper to the Special Issue on Advanced Motion Control of Multiple Robots</i>, 2023.<br> [<a style="color:blue" href="publications/machines2023.pdf">pdf</a> | <a style="color:blue" href="publications/machines2023.txt">bibtex</a> | <a style="color:blue" href="https://www.mdpi.com/2075-1702/11/2/128">publisher link</a>]
-                  </p>
-                  <br>
-                  <p align="justify"><b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Rosario Aragüés, Carlos Sagüés, “<b>Dynamic consensus with prescribed convergence time for multi-leader formation tracking</b>”. <i>IEEE Control Systems Letters</i>, 2022.<br> [<a style="color:blue" href="publications/lcss2022.pdf">pdf</a> | <a style="color:blue" href="publications/lcss2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2206.11608">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/9792300">publisher link</a>]
-                  </p>
-                  <br>
-                  <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>REDCHO: Robust Exact Dynamic Consensus of High Order</b>”. <i>Automatica</i>, 2022.<br> [<a style="color:blue" href="publications/automatica2022.pdf">pdf</a> | <a style="color:blue" href="publications/automatica2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2204.12344">arxiv</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S0005109822001686?via%3Dihub">publisher link</a>]
-                  </p>
-                  <br>
-                  <p align="justify"><b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>EDCHO: High order exact dynamic consensus</b>”. <i>Automatica</i>, 2021.<br>[<a style="color:blue" href="publications/automatica2021.pdf">pdf</a> | <a style="color:blue" href="publications/automatica2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2202.03012">arxiv</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/abs/pii/S0005109821002703">publisher link</a>]
-                  </p>
-                  <br>
-                  <p align="justify">Miguel Trujillo, <b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Michael Defoort, Javier Ruiz-León, Hector Becerra, “<b>Autonomous and non-autonomous fixed-time leader–follower consensus for second-order multi-agent systems</b>”. <i>Nonlinear Dynamics</i>, 2020.<br>
-                     [<a style="color:blue" href="publications/nody2020.txt">bibtex</a> | <a style="color:blue" href="https://link.springer.com/article/10.1007/s11071-020-06075-7">publisher link</a>]
-                  </p>
-                  <br>
-                  <p align="justify"><b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Esteban Jiménez-Rodríguez, Juan D. Sánchez-Torres, Alexander G. Loukianov, “<b>On predefined-time consensus protocols for dynamic networks</b>”. <i>Journal of the Franklin Institute</i>, 2020.<br>
-                     [<a style="color:blue" href="publications/fi2020.pdf">pdf</a> | <a style="color:blue" href="publications/fi2020.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1910.08450">arxiv</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S0016003219308622">publisher link</a>]
-                  </p>
-                  <br>
-                  <p align="justify"><b>Rodrigo Aldana-López</b> David Gómez-Gutiérrez, Michael Defoort, Juan D. Sánchez-Torres, Aldo Jonathan Muñoz-Vázquez, “<b>A class of robust consensus algorithms with predefined-time convergence under switching topologies</b>”. <i>International Journal of Robust and Nonlinear Control</i>, 2019.<br>[<a style="color:blue" href="publications/ijrnc2019.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2019.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1812.07545">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rnc.4715">publisher link</a>]
-                  </p>
-                  <br>
-               </div>
-               <h3 class="big">Exact differentiation algorithms</h3>
-               <hr>
-               <br>
-               <div class="pub_list">
-				  <p align="justify"><b>Rodrigo Aldana-López</b>, Richard Seeber, David Gómez-Gutiérrez, Marco Tulio Angulo, Michael Defoort, “<b>A redesign methodology generating predefined-time differentiators with bounded time-varying gains</b>”. <i>International Journal of Robust and Nonlinear Control</i>, 2022.<br>[<a style="color:blue" href="publications/ijrnc2022.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2106.06429">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/10.1002/rnc.6315">publisher link</a>]
-                  </p>
-                  <br>
-                  <p align="justify">Hernan Haimovich, Richard Seeber, <b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, “<b>Differentiator for Noisy Sampled Signals with Best Worst-Case Accuracy</b>”. <i>IEEE Control Systems Letters</i>, 2021.<br>[<a style="color:blue" href="publications/icsl2021.pdf">pdf</a> | <a style="color:blue" href="publications/icsl2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2106.05320">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/abstract/document/9448332">publisher link</a>]
-                  </p>
-                  <br>
-                  <p align="justify"><b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Miguel A. Trujillo, Manuel Navarro-Gutiérrez, Javier Ruiz-León, Hector M. Becerra, “<b>A predefined-time first-order exact differentiator based on time-varying gains</b>”. <i>International Journal of Robust and Nonlinear Control</i>, 2021.<br>[<a style="color:blue" href="publications/ijrnc2021.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2104.02140">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rnc.5536">publisher link</a>]
-                  </p>
-                  <br>
-               </div>
-               <h3 class="big">Fixed-time stability in control systems</h3>
-               <hr>
-               <br>
-               <div class="pub_list">
-                  <p align="justify"><b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Esteban Jiménez-Rodríguez, Juan Diego Sánchez-Torres, Michael Defoort, “<b>Generating new classes of fixed-time stable systems with predefined upper bound for the settling time</b>”. <i>International Journal of Control</i>, 2021.<br>[<a style="color:blue" href="publications/ijc2021.pdf">pdf</a> | <a style="color:blue" href="publications/ijc2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1901.02782">arxiv</a> | <a style="color:blue" href="https://www.tandfonline.com/doi/abs/10.1080/00207179.2021.1936190?journalCode=tcon20">publisher link</a>]
-                  </p>
-                  <br>
-                  <p align="justify">Juan D. Sánchez-Torres, Aldo Jonathan Muñoz-Vázquez, Michael Defoort, <b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, “<b>Predefined-time integral sliding mode control of second-order systems</b>”. <i>International Journal of Systems Science</i>, 2020.<br>[<a style="color:blue" href="publications/ijss2020.txt">bibtex</a> | <a style="color:blue" href="https://www.tandfonline.com/doi/abs/10.1080/00207721.2020.1815893#:~:text=Predefined%2Dtime%20integral%20sliding%20mode%20control%20of%20second%2Dorder%20systems,-Full%20Article&text=This%20manuscript%20introduces%20the%20design,class%20of%20second%2Dorder%20systems.&text=Then%2C%20the%20system%20dynamics%20evolve,during%20the%20integral%20sliding%20motion">publisher link</a>]
-                  </p>
-                  <br>
-                  <p align="justify"><b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Esteban Jiménez-Rodríguez, Juan D. Sánchez-Torres, Michael Defoort, “<b>Enhancing the settling time estimation of a class of fixed-time stable systems</b>”. <i>International Journal of Robust and Nonlinear Control</i>, 2019.<br>[<a style="color:blue" href="publications/ijrnc2019b.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2019b.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1809.07012">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/full/10.1002/rnc.4600">publisher link</a>]
-                  </p>
-                  <br>
-               </div>
-               <h3 class="big">Digital communications</h3>
-               <hr>
-               <br>
-               <div class="pub_list">
-                  <p align="justify">Abisaí Ramírez-Pérez, <b>Rodrigo Aldana-López</b>, Omar Longoria-Gandara, Jose M. Valencia-Velasco, Luis Pizano-Escalante, Ramon Parra-Michel, “<b>Modular Arithmetic CPM for SDR Platforms</b>”. <i>IEEE Transactions on Circuits and Systems II: Express Briefs</i>, 2022.<br>[<a style="color:blue" href="publications/tcasii2022.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/9684561">publisher link</a>]
-                  </p>
-                  <br>
-                  <p align="justify">J. Valencia-Velasco, O. Longoria-Gandara, <b>Rodrigo Aldana-López</b> and Luis Pizano-Escalante, “<b>Low-Complexity Maximum-Likelihood Detector for IoT BLE Devices</b>”. <i>IEEE Internet of Things Journal</i>, 2020.<br>[<a style="color:blue" href="publications/iot2020.txt">bibtex</a>| <a style="color:blue" href="https://ieeexplore.ieee.org/document/8962324">publisher link</a>]
-                  </p>
-                  <br>
-                  <p align="justify"><b>Rodrigo Aldana-López</b>, Jose M. Valencia-Velasco, Omar Longoria-Gandara, Luis Pizano-Escalante, “<b>Digital linear GFSK demodulator for IoT devices</b>”. <i>IET Communications</i>, 2018.<br>[<a style="color:blue" href="publications/iet2018.txt">bibtex</a> | <a style="color:blue" href="https://ietresearch.onlinelibrary.wiley.com/doi/epdf/10.1049/iet-com.2018.5040">publisher link</a>]
-                  </p>
-                  <br>
-               </div>
+               <h3 class="big"> Western Institute of Technology and Higher Education (ITESO)</h3>
+            <hr>
+            <br>
+            <p align="justify"><b>Computer architecture (Undergraduate level). Principal instructor</b>: This course offers a comprehensive overview of the fundamental concepts of computer organization and architecture, covering a range of topics including the history of computing, the power wall, various instruction set architectures, critical paths, pipeline design, and cache memory. Students apply their knowledge by using Verilog to develop a replica of a classical pipelined MIPS processor and run a Hanoi tower program on it using MIPS assembly language. This hands-on approach provides students with a deeper understanding of the inner workings of computer systems and the interplay between hardware and software.</p>
+            <ul>
+               <li> Summer 2019</li>
+               <li> Spring 2019</li>
+               <li> Spring 2018</li>
+               <li> Autumn 2017</li>
+               <li> Autumn 2016</li>
+            </ul>
+            <br>
+            <p align="justify"><b>Embedded systems II (Undergraduate level). Principal instructor</b>: This course covers advanced topics in embedded systems, including real-time scheduling, basic kernel development, and the use of advanced peripherals like USB and Ethernet with TCP/IP. Students gain hands-on experience with the FRDMK64F board, a platform that offers a comprehensive set of features for the development of a wide range of embedded applications. Through this course, they deepen their understanding of the key concepts and techniques involved in the design and implementation of advanced embedded systems.<p>
+            <ul>
+               <li> Autumn 2018</li>
+               <li> Spring 2018</li>
+               <li> Spring 2017</li>
+            </ul>
+            <br>
+            <h3 class="big"> Monterrey Institute of Technology and Higher Education (ITESM)</h3>
+            <hr>
+            <br>
+            <p align="justify"><b>Topics on advanced control with application to the control of Aerial Robots (Undergraduate level). Assistant/technical instructor (~20% of the course)</b>: This course provides a comprehensive introduction to the fundamental concepts of basic nonlinear control theory, with a focus on its application to quadrotors. Students apply what they have learned through hands-on experience with the Crazyflie platform, where they get to test and refine their own control designs. Through this practical approach, they gain a deeper understanding of the key principles and techniques involved in nonlinear control, and how they can be applied to real-world systems.<p>
+            <ul>
+               <li> Autumn 2018</li>
+               <li> Autumn 2016</li>
+            </ul>
+            <br>
+            <p align="justify"><b> Embedded Software with application to the control of Aerial Robots (Graduate level). Assistant/technical instructor (~20% of the course):</b> This course provides a comprehensive introduction to the fundamental concepts of basic nonlinear control theory, with a focus on its application to quadrotors. Students apply what they have learned through hands-on experience with the Crazyflie platform, where they get to test and refine their own control designs. Through this practical approach, they gain a deeper understanding of the key principles and techniques involved in nonlinear control, and how they can be applied to real-world systems.<p>
+            <ul>
+               <li> Spring 2017</li>
+            </ul>
+            <br>
+            <p align="justify"><b> Embedded Systems (Graduate level). Assistant instructor (~10% of the course):</b> This segment of the course explores the fundamental principles of real-time kernel programming using the FRDMK64F board as a platform.<p>
+            <ul>
+               <li> Autumn 2017</li>
+            </ul>
+            <br>
             </div>
          </div>
          <br><br>
