--- a/patents.html
+++ b/patents.html
@@ -56,7 +56,10 @@
          <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                <div class="pub_list">
-                  <p>Zamora Esquivel, Julio, ; Aldana Lopez, Rodrigo, ; Campos Macias, Leobardo, ; Cruz Vargas, Jesus, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, ; Macias Garcia, Edgar, “<b>Methods And Apparatus To Facilitate Autonomous Navigation Of Robotic Devices. </b>”. <i>US11249492 (B2)</i>, 2022 United States. Also published as DE102020105045 (A1), US2019220043 (A1)  <br>
+                  <p> Leobardo Campos Macias, <b>Rodrigo Aldana Lopez</b>, Rafael De La Guardia Gonzalez, David Gomez Gutierrez, Jose Parra Vilchis, “<b>Methods And Apparatus For Dynamically Routing Robots Based On Exploratory On-board Mapping</b>”.<i>US Patent US11314254 (B2)</i>, 2020 United States. <br>[<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20220426&DB=&locale=en_EP&CC=US&NR=11314254B2&KC=B2&ND=4">Espacenet link</a>]
+                  </p>
+                  <br>
+                  <p>Zamora Esquivel, Julio, ; Aldana Lopez, Rodrigo, ; Campos Macias, Leobardo, ; Cruz Vargas, Jesus, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, ; Macias Garcia, Edgar, “<b>Methods And Apparatus To Facilitate Autonomous Navigation Of Robotic Devices. </b>”. <i>Patent US11249492 (B2)</i>, 2022 United States. Also published as DE102020105045 (A1), US2019220043 (A1)  <br>
                      [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=5&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201001&CC=DE&NR=102020105045A1&KC=A1">Espacenet link</a>]
                   </p>
 				  <br>
@@ -146,10 +149,6 @@
                   <br>
                   <p> Gomez Gutierrez, David, ; Parra Vilchis, Jose, ; De La Guardia Gonzalez, Rafael, ; Aldana Lopez, Rodrigo, ; Campos Macias, Leobardo, “<b>Dynamic Generation Of Restricted Flight Zones For Drones. </b>”. <i>Patent application US2021034078 (A1)</i>, 2021 United States. Also published as WO2019132898 (A1), WO2019132898 (A8)  <br>
                      [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=1&ND=3&adjacent=true&locale=en_EP&FT=D&date=20210204&CC=US&NR=2021034078A1&KC=A1">Espacenet link</a>]
-                  </p>
-                  <br>
-                  <p> Campos Macias, Leobardo, ; Aldana Lopez, Rodrigo, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, ; Parra Vilchis, Jose, “<b>Methods And Apparatus For Dynamically Routing Robots Based On Exploratory On-board Mapping. </b>”. <i>Patent application US2019220020 (A1)</i>, 2020 United States. Also published as DE102020104358 (A1)  <br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=4&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201001&CC=DE&NR=102020104358A1&KC=A1">Espacenet link</a>]
                   </p>
                   <br>
                   <p>ZXue, Feng, ; Akdeniz, Mustafa, ; Suh, Seong-youp John, ; Bai, Jingwen, ; Yeh, Shu-ping, ; Aldana Lopez, Rodrigo, ; Alban, Eduardo, ; Arditti Ilitzky, David, ; Auzas, Philippe, ; Byrne, Jonathan, ; Campos Macias, Leobardo, ; Davis, Mark, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, ; Huusari, Timo, ; Jackson, Bradley Alan, ; Karella, Ranganadh, ; Kasturi, Sreenivas, ; Ke, Mengkun, ; Liao, Ching-yu, ; Shi, Tiefeng, ; Talwar, Shilpa, ; Tong, Daniel, ; Yiu, Candy, “<b>Unmanned Aerial Vehicle Communication. </b>”. <i>Patent application WO2020113062 (A1)</i>, 2020 World Intellectual Property Organization. Also published as DE102020105045 (A1)  <br>
