--- a/patents.html
+++ b/patents.html
@@ -56,7 +56,10 @@
          <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                <div class="pub_list">
-                  <p> Leobardo Campos Macias, <b>Rodrigo Aldana Lopez</b>, Rafael De La Guardia Gonzalez, David Gomez Gutierrez, Jose Parra Vilchis, “<b>Methods And Apparatus For Dynamically Routing Robots Based On Exploratory On-board Mapping</b>”.<i>US Patent US11314254 (B2)</i>, 2020 United States. <br>[<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20220426&DB=&locale=en_EP&CC=US&NR=11314254B2&KC=B2&ND=4">Espacenet link</a>]
+                  <p> Leobardo Campos Macias, <b>Rodrigo Aldana Lopez</b>, Rafael De La Guardia Gonzalez, David Gomez Gutierrez, Jose Parra Vilchis, “<b>Methods And Apparatus For Dynamically Routing Robots Based On Exploratory On-board Mapping</b>”. Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20220426&DB=&locale=en_EP&CC=US&NR=11314254B2&KC=B2&ND=4">US11314254 (B2)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=6&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201001&CC=DE&NR=102020104358A1&KC=A1">DE102020104358 (A1)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190718&DB=&locale=en_EP&CC=US&NR=2019220020A1&KC=A1&ND=4">US2019220020 (A1)</a>, 
                   </p>
                   <br>
                   <p>Zamora Esquivel, Julio, ; Aldana Lopez, Rodrigo, ; Campos Macias, Leobardo, ; Cruz Vargas, Jesus, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, ; Macias Garcia, Edgar, “<b>Methods And Apparatus To Facilitate Autonomous Navigation Of Robotic Devices. </b>”. <i>Patent US11249492 (B2)</i>, 2022 United States. Also published as DE102020105045 (A1), US2019220043 (A1)  <br>
