--- a/patents.html
+++ b/patents.html
@@ -81,60 +81,86 @@
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20191003&DB=&locale=en_EP&CC=WO&NR=2019190692A1&KC=A1&ND=4">WO2019190692 (A1)</a>. 
                   </p>
                   <br>
-                  <p> Leobardo Campos Macias Emmanuel, ; David Gomez Gutierrez, ; José Ignacio Parra Vilchis , ; Rafael De La Guardia Gonzalez, ; Rodrigo Aldana-López, “<b>Hybrid Unmanned Vehicles And Related Methods</b>”. <i>Patent US10647424 (B2)</i>, 2020 United States. Also published as DE112018005498 (T5), US2019092464 (A1), WO2019067110 (A1).<br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=3&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201015&CC=DE&NR=112018005498T5&KC=T5">Espacenet link</a>]
+                  <p> Leobardo Campos Macias Emmanuel, David Gomez Gutierrez, José Ignacio Parra Vilchis, Rafael De La Guardia Gonzalez, <b>Rodrigo Aldana-López</b>, “<b>Hybrid Unmanned Vehicles And Related Methods</b>”, 2020. Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20200512&DB=&locale=en_EP&CC=US&NR=10647424B2&KC=B2&ND=4">US10647424 (B2)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=3&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201015&CC=DE&NR=112018005498T5&KC=T5">DE112018005498 (T5)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190328&DB=&locale=en_EP&CC=US&NR=2019092464A1&KC=A1&ND=4">US2019092464 (A1)</a>,
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190404&DB=&locale=en_EP&CC=WO&NR=2019067110A1&KC=A1&ND=4">WO2019067110 (A1) </a>.
                   </p>
                   <br>
-                  <p> Rafael De La Guardia Gonzalez, ; Rodrigo Aldana-López, ; Leobardo Campos Macias, ; David Gomez Gutierrez, ; Anthony Kyung Guzman Leguel, ; Jose Ignacio Parra Vilchis, “<b>Cooperative Mapping For Autonomous Vehicles, Robots Or Multi-agent Systems</b>”. <i>Patent US11004332 (B2)</i>, 2020 United States.<br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=7&ND=3&adjacent=true&locale=en_EP&FT=D&date=20200430&CC=US&NR=2020135014A1&KC=A1">Espacenet link</a>]
+                  <p> Rafael De La Guardia Gonzalez, <b>Rodrigo Aldana-López</b>, Leobardo Campos Macias, David Gomez Gutierrez, Anthony Kyung Guzman Leguel, Jose Ignacio Parra Vilchis, “<b>Cooperative Mapping For Autonomous Vehicles, Robots Or Multi-agent Systems</b>”, 2020. Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20210511&DB=&locale=en_EP&CC=US&NR=11004332B2&KC=B2&ND=4">US11004332 (B2)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=7&ND=3&adjacent=true&locale=en_EP&FT=D&date=20200430&CC=US&NR=2020135014A1&KC=A1">US2020135014 (A1)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20210622&DB=&locale=en_EP&CC=CN&NR=113012256A&KC=A&ND=4">CN113012256 (A)</a>,
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20210624&DB=&locale=en_EP&CC=DE&NR=102020128307A1&KC=A1&ND=4">DE102020128307 (A1)</a>.
                   </p>
                   <br>
-                  <p> Parra Vilchis, Jose I, ; Guzman Leguel, Anthony K, ; Gutierrez, David Gomez, ; Leobardo Campos Macias E, ; Gonzalez, Rafael De La Guardia, ; Lopez, Rodrigo Aldana, “<b>Decentralized Synchronization Of Multiple Agents</b>”. <i>Patent US10763868 (B2)</i>, 2020 United States.<br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=7&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201001&CC=DE&NR=102020105045A1&KC=A1">Espacenet link</a>]
+                  <p> Jose Ignacio Parra Vilchis, Anthony Kyung Guzman Leguel, David Gomez Gutierrez, Leobardo Campos Macias, Rafael De La Guardia, <b> Rodrigo Aldana-López</b>, “<b>Decentralized Synchronization Of Multiple Agents</b>”, 2020. Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20220215&DB=&locale=en_EP&CC=US&NR=11249492B2&KC=B2&ND=4">US11249492 (B2)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=7&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201001&CC=DE&NR=102020105045A1&KC=A1">DE102020105045 (A1)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190718&DB=&locale=en_EP&CC=US&NR=2019220043A1&KC=A1&ND=4">US2019220043 (A1)</a>.
                   </p>
                   <br>
-                  <p> Cordourier Maruri, Hector, ; Huang, Jonathan, ; Lopez Meyer, Paulo, ; Rafael De La Guardia Gonzalez, ; David Gomez Gutierrez, ; Rodrigo Aldana-López, ; Leobardo Campos Macias, ; Parra Vilchis, Jose, ; Camacho Perez, Jose, ; Zamora Esquivel, Julio, “<b>Systems, Apparatus, And Methods For Drone Audio Noise Reduction</b>”. <i>Patent US10692481 (B2)</i>, 2019 United States. Also published as CN109754815 (A),   DE102018124769 (A1), US10290293 (B2), US2019043465 (A1).<br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=10&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190801&CC=US&NR=2019237057A1&KC=A1">Espacenet link</a>]
+                  <p> Hector Cordourier Maruri, Jonathan Huang, Paulo Lopez Meyer, Rafael De La Guardia Gonzalez, David Gomez Gutierrez, <b>Rodrigo Aldana-López, Leobardo Campos Macias, Jose Ignacio Parra Vilchis, Jose Camacho Perez, Julio Zamora Esquivel, “<b>Systems, Apparatus, And Methods For Drone Audio Noise Reduction</b>”, 2019. Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190514&DB=&locale=en_EP&CC=US&NR=10290293B2&KC=B2&ND=4">US10290293 (B2)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20200623&DB=&locale=en_EP&CC=US&NR=10692481B2&KC=B2&ND=4">US10692481 (B2)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=10&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190801&CC=US&NR=2019237057A1&KC=A1">US2019237057 (A1)</a>,
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190514&DB=&locale=en_EP&CC=CN&NR=109754815A&KC=A&ND=4">CN109754815 (A)</a>,
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190509&DB=&locale=en_EP&CC=DE&NR=102018124769A1&KC=A1&ND=4">DE102018124769 (A1)</a>,
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190207&DB=&locale=en_EP&CC=US&NR=2019043465A1&KC=A1&ND=4">US2019043465 (A1) </a>.
                   </p>
                   <br>
-                  <p> Rodrigo Aldana-López, ; Leobardo Campos Macias, ; David Gomez Gutierrez, ; Parra Vilchis, Jose, ; Rafael De La Guardia Gonzalez, “<b>Drone Path Planning</b>”. <i>Patent US10768623 (B2)</i>, 2019 United States.<br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=10&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190801&CC=US&NR=2019237057A1&KC=A1">Espacenet link</a>]
+                  <p> <b>Rodrigo Aldana-López</b>, Leobardo Campos Macias, David Gomez Gutierrez, Jose Ignacio Parra Vilchis, Rafael De La Guardia Gonzalez, “<b>Drone Path Planning</b>”, 2019. Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20200908&DB=&locale=en_EP&CC=US&NR=10768623B2&KC=B2&ND=4">US10768623 (B2)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=11&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190627&CC=US&NR=2019196467A1&KC=A1">US2019196467 (A1)</a>.
                   </p>
                   <br>
-                  <p> Gutierrez David Gomez; Campos Macias Leobardo; Aldana Lopez Rodrigo; De La Guardia Gonzalez Rafael; Zamora Esquivel Julio; Parra Vilchis Jose; Arditti Ilitzky David, “<b>Vision-based Cooperative Collision Avoidance</b>”. <i>Patent US10657833 (B2) </i>, 2019 United States. Also published as DE102018127144 (A1), US2019051193 (A1), CN109859533 (A).<br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=12&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190607&CC=CN&NR=109859533A&KC=A">Espacenet link</a>]
+                  <p> David Gomez Gutierrez, Leobardo Campos Macias, <b>Rodrigo Aldana Lopez</b>, Rafael De La Guardia, Julio Zamora Esquivel, Jose Ignacio Parra Vilchis, David Arditti Ilitzky, “<b>Vision-based Cooperative Collision Avoidance</b>”, 2019. Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20200519&DB=&locale=en_EP&CC=US&NR=10657833B2&KC=B2&ND=4">US10657833 (B2)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=12&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190607&CC=CN&NR=109859533A&KC=A">CN109859533 (A)</a>,
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190606&DB=&locale=en_EP&CC=DE&NR=102018127144A1&KC=A1&ND=4">DE102018127144 (A1)</a>,
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190214&DB=&locale=en_EP&CC=US&NR=2019051193A1&KC=A1&ND=4">US2019051193 (A1)</a>.
                   </p>
                   <br>
-                  <p> David Gomez Gutierrez, ; Jose Ignacio Parra Vilchis, ; Rafael De La Guardia Gonzalez, ; Leobardo Campos Macias Emmanuel, ; Rodrigo Aldana-López, “<b>Unmanned Aerial Vehicles And Related Methods And Systems</b>”. <i>Patent US10332394 (B2) </i>, 2019 United States. Also published as US2019051169 (A1), WO2019094122 (A1).<br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=13&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190516&CC=WO&NR=2019094122A1&KC=A1">Espacenet link</a>]
+                  <p> David Gomez Gutierrez, Jose Ignacio Parra Vilchis, Rafael De La Guardia Gonzalez, Leobardo Campos Macias, <b>Rodrigo Aldana-López</b>, “<b>Unmanned Aerial Vehicles And Related Methods And Systems</b>”, 2019. Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190625&DB=&locale=en_EP&CC=US&NR=10332394B2&KC=B2&ND=4">US10332394 (B2)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=13&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190516&CC=WO&NR=2019094122A1&KC=A1">WO2019094122 (A1)</a>,
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190214&DB=&locale=en_EP&CC=US&NR=2019051169A1&KC=A1&ND=4">US2019051169 (A1)</a>.
                   </p>
                   <br>
-                  <p> Rodrigo Aldana-López, ; Gómez Gutiérrez, David, ; José Ignacio Parra Vilchis , ; De La Guardia González, Rafael, ; Campos Macías, Leobardo Emmanuel, “<b>Transformable Unmanned Vehicles And Related Methods</b>”. <i>Patent US10696372 (B2) </i>, 2019 United States.<br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=14&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190404&CC=US&NR=2019100296A1&KC=A1">Espacenet link</a>]
+                  <p> <b>Rodrigo Aldana-López</b>, David Gómez Gutiérrez, José Ignacio Parra Vilchis, Rafael De La Guardia González, Leobardo Campos Macías, “<b>Transformable Unmanned Vehicles And Related Methods</b>”, 2019. Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20200630&DB=&locale=en_EP&CC=US&NR=10696372B2&KC=B2&ND=4">US10696372 (B2)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=14&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190404&CC=US&NR=2019100296A1&KC=A1">US2019100296 (A1)</a>.
                   </p>
                   <br>
-                  <p>Leobardo Campos Macias, ; Cordourier Maruri, Hector, ; David Gomez Gutierrez, ; Rodrigo Aldana-López, ; Parra Vilchis, Jose, “<b>Methods And Apparatus For Preventing Collisions Between Drones Based On Drone-to-drone Acoustic Communications  </b>”. <i>Patent US10957209 (B2)</i>, 2019 United States.<br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=17&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190214&CC=US&NR=2019051197A1&KC=A1">Espacenet link</a>]
+                  <p>Leobardo Campos Macias, Hector Cordourier Maruri, David Gomez Gutierrez, <b>Rodrigo Aldana-López</b>, José Ignacio Parra Vilchis, “<b>Methods And Apparatus For Preventing Collisions Between Drones Based On Drone-to-drone Acoustic Communications </b>”, 2019. Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20210323&DB=&locale=en_EP&CC=US&NR=10957209B2&KC=B2&ND=4">US10957209 (B2)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=17&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190214&CC=US&NR=2019051197A1&KC=A1">US2019051197 (A1)</a>.
                   </p>
                   <br>
-                  <p>Rafael De La Guardia Gonzalez, ; Pohl, Daniel, ; David Gomez Gutierrez, ; Hippelein, Andreas, ; Leobardo Campos Macias, ; Rodrigo Aldana-López, ; Parra Vilchis, Jose, ; Vervoorst, Jan Willem, “<b>Drone Obstacle Avoidance Using Real-time Wind Estimation </b>”. <i>Patent US10909864 (B2)</i>, 2020 United States.<br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=16&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190214&CC=US&NR=2019051195A1&KC=A1">Espacenet link</a>]
+                  <p>Rafael De La Guardia Gonzalez, Daniel Pohl, David Gomez Gutierrez, Andreas Hippelein, Leobardo Campos Macias, <b>Rodrigo Aldana-López</b>, José Ignacio Parra Vilchis, Jan Willem Vervoorst, “<b>Drone Obstacle Avoidance Using Real-time Wind Estimation </b>”, 2020. Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20210202&DB=&locale=en_EP&CC=US&NR=10909864B2&KC=B2&ND=4">US10909864 (B2)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=16&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190214&CC=US&NR=2019051195A1&KC=A1">US2019051195 (A1)</a>.
                   </p>
                   <br>
-                  <p>Pohl, Daniel, ; Rodrigo Aldana-López, ; Leobardo Campos Macias, ; Rafael De La Guardia Gonzalez, ; David Gomez Gutierrez, ; Parra Vilchis, Jose, ; Schick, Roman, ; Lopez, Rodrigo Aldana, ; Macias, Leobardo Campos, ; Gutierrez, David Gomez, ; Vilchis, Jose Parra, “<b>Autonomous Rescue Lane</b>”. <i>Patent US10802504 (B2)</i>, 2019 United States.<br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=19&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190214&CC=US&NR=2019049994A1&KC=A1">Espacenet link</a>]
+                  <p>Daniel Pohl, <b>Rodrigo Aldana-López</b>, Leobardo Campos Macias, Rafael De La Guardia Gonzalez, David Gomez Gutierrez, José Ignacio Parra Vilchis, Roman Schick, “<b>Autonomous Rescue Lane</b>”, 2019. Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20201013&DB=&locale=en_EP&CC=US&NR=10802504B2&KC=B2&ND=4">US10802504 (B2)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=19&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190214&CC=US&NR=2019049994A1&KC=A1">US2019049994 (A1)</a>.
                   </p>
                   <br>
-                  <p>David Gomez Gutierrez, ; Falconer, Maynard C, ; Skeba, Kirk W, ; Rodrigo Aldana-López, “<b>Trajectory Tracking Controllers For Rotorcraft Unmanned Aerial Vehicles (uavs)</b>”. <i>Patent US10564650 (B2)  </i>, 2019 United States.<br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=20&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190131&CC=US&NR=2019033892A1&KC=A1">Espacenet link</a>]
+                  <p>David Gomez Gutierrez, Maynard C. Falconer, Kirk W. Skeba, <b>Rodrigo Aldana-López</b>, “<b>Trajectory Tracking Controllers For Rotorcraft Unmanned Aerial Vehicles (uavs)</b>”, 2019. Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20200218&DB=&locale=en_EP&CC=US&NR=10564650B2&KC=B2&ND=4">US10564650 (B2)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=20&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190131&CC=US&NR=2019033892A1&KC=A1">US2019033892 (A1)</a>.
                   </p>
                   <br>
-                  <p>Rodrigo Aldana-López, ; Parra Vilchis, Jose I, ; Rafael De La Guardia Gonzalez, ; David Gomez Gutierrez, “<b>Methods And Apparatus To Implement Nonlinear Control Of Vehicles Moved Using Multiple Motors</b>”. <i>Patent US10372134 (B2)</i>, 2019 United States.<br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=21&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190103&CC=US&NR=2019004519A1&KC=A1">Espacenet link</a>]
+                  <p><b>Rodrigo Aldana-López</b>, José Ignacio Parra Vilchis, Rafael De La Guardia Gonzalez, David Gomez Gutierrez, “<b>Methods And Apparatus To Implement Nonlinear Control Of Vehicles Moved Using Multiple Motors</b>”, 2019. Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190806&DB=&locale=en_EP&CC=US&NR=10372134B2&KC=B2&ND=4">US10372134 (B2)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=21&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190103&CC=US&NR=2019004519A1&KC=A1">US2019004519 (A1)</a>.
                   </p>
                   <br>
-                  <p>David Gomez Gutierrez, ; Rafael De La Guardia Gonzalez, ; Parra Vilchis, Jose I, ; Rodrigo Aldana-López, “<b>Unmanned Aerial Vehicles And Related Methods And Systems</b>”. <i>Patent US10507916 (B2)</i>, 2019 United States.<br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=22&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190103&CC=US&NR=2019002103A1&KC=A1">Espacenet link</a>]
+                  <p>David Gomez Gutierrez, Rafael De La Guardia Gonzalez, José Ignacio Parra Vilchis, <b>Rodrigo Aldana-López</b>, “<b>Unmanned Aerial Vehicles And Related Methods And Systems</b>”, 2019. Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20191217&DB=&locale=en_EP&CC=US&NR=10507916B2&KC=B2&ND=4">US10507916 (B2)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=22&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190103&CC=US&NR=2019002103A1&KC=A1">US2019002103 (A1)</a>.
                   </p>
                   <br>
                </div>
