--- a/patents.html
+++ b/patents.html
@@ -93,12 +93,11 @@
                   </p>
                   <br>
                   <p align="justify"> Jose Ignacio Parra Vilchis, Anthony Kyung Guzman Leguel, David Gomez Gutierrez, Leobardo Campos Macias, Rafael De La Guardia, <b> Rodrigo Aldana-López</b>, “<b>Decentralized Synchronization Of Multiple Agents</b>”, 2020. <br>Published as: 
-<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20220215&DB=&locale=en_EP&CC=US&NR=11249492B2&KC=B2&ND=4">US11249492 (B2)</a>, 
-<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=7&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201001&CC=DE&NR=102020105045A1&KC=A1">DE102020105045 (A1)</a>, 
-<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190718&DB=&locale=en_EP&CC=US&NR=2019220043A1&KC=A1&ND=4">US2019220043 (A1)</a>.
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20200901&DB=&locale=en_EP&CC=US&NR=10763868B2&KC=B2&ND=4">US10763868 (B2)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=10&ND=3&adjacent=true&locale=en_EP&FT=D&date=20191024&CC=US&NR=2019326916A1&KC=A1">US2019326916 (A1)</a>.
                   </p>
                   <br>
-                  <p align="justify"> Hector Cordourier Maruri, Jonathan Huang, Paulo Lopez Meyer, Rafael De La Guardia Gonzalez, David Gomez Gutierrez, <b>Rodrigo Aldana-López, Leobardo Campos Macias, Jose Ignacio Parra Vilchis, Jose Camacho Perez, Julio Zamora Esquivel, “<b>Systems, Apparatus, And Methods For Drone Audio Noise Reduction</b>”, 2019. <br>Published as: 
+                  <p align="justify"> Hector Cordourier Maruri, Jonathan Huang, Paulo Lopez Meyer, Rafael De La Guardia Gonzalez, David Gomez Gutierrez, <b>Rodrigo Aldana-López</b>, Leobardo Campos Macias, Jose Ignacio Parra Vilchis, Jose Camacho Perez, Julio Zamora Esquivel, “<b>Systems, Apparatus, And Methods For Drone Audio Noise Reduction</b>”, 2019. <br>Published as: 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190514&DB=&locale=en_EP&CC=US&NR=10290293B2&KC=B2&ND=4">US10290293 (B2)</a>, 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20200623&DB=&locale=en_EP&CC=US&NR=10692481B2&KC=B2&ND=4">US10692481 (B2)</a>, 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=10&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190801&CC=US&NR=2019237057A1&KC=A1">US2019237057 (A1)</a>,
