--- a/patents.html
+++ b/patents.html
@@ -54,10 +54,23 @@
             <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                <div class="pub_list">
 <ol>
+                  <li><p align="justify"><p><b>Rodrigo Aldana-López</b>, Leobardo Emmanuel Campos Macías, Julio Cesar Zamora Esquivel, Jesús Adán Cruz Vargas, David Gómez Gutiérrez, “<b>Methods And Apparatus For Training A Neural Network </b>”, 2023. Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20230110&DB=&locale=en_EP&CC=US&NR=11551058B2&KC=B2&ND=4">US11551058 (B2)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=8&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201230&CC=EP&NR=3757687A1&KC=A1">EP3757687 (A1)</a>,
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20191031&DB=&locale=en_EP&CC=US&NR=2019332918A1&KC=A1&ND=4">US2019332918 (A1)</a>.
+                  </p></li>
+				  <br>
+                  <li><p align="justify"> Jose Parra Vilchis, Rafael De La Guardia Gonzalez, <b>Rodrigo Aldana-López</b>, David Gomez Gutierrez, Leobardo Campos Macias, “<b>Architecture for contextual memories in map representation for 3D reconstruction and navigation</b>”, 2022. <br>Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20220201&DB=&locale=en_EP&CC=US&NR=11238641B2&KC=B2&ND=4">US11238641 (B2)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=0&ND=3&adjacent=true&locale=en_EP&FT=D&date=20220728&CC=DE&NR=112020004577T5&KC=T5">DE112020004577 (T5)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190718&DB=&locale=en_EP&CC=US&NR=2019220020A1&KC=A1&ND=4">US2020027262 (A1)</a>. 
+                  </p></li>
+                  <br>
                   <li><p align="justify"> Leobardo Campos Macias, <b>Rodrigo Aldana Lopez</b>, Rafael De La Guardia Gonzalez, David Gomez Gutierrez, Jose Parra Vilchis, “<b>Methods And Apparatus For Dynamically Routing Robots Based On Exploratory On-board Mapping</b>”, 2022. <br>Published as: 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20220426&DB=&locale=en_EP&CC=US&NR=11314254B2&KC=B2&ND=4">US11314254 (B2)</a>, 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=6&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201001&CC=DE&NR=102020104358A1&KC=A1">DE102020104358 (A1)</a>, 
-<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190718&DB=&locale=en_EP&CC=US&NR=2019220020A1&KC=A1&ND=4">US2019220020 (A1)</a>. 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=0&ND=3&adjacent=true&locale=en_EP&FT=D&date=20220728&CC=DE&NR=112020004577T5&KC=T5">US2019220020 (A1)</a>,
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=0&ND=3&adjacent=true&locale=en_EP&FT=D&date=20220728&CC=DE&NR=112020004577T5&KC=T5">WO2021061241 (A1)</a>. 
                   </p></li>
                   <br>
                   <li><p align="justify">Julio Zamora Esquivel, <b>Rodrigo Aldana Lopez</b> Leobardo Campos Macias, Jesus Cruz Vargas, Rafael De La Guardia Gonzalez, David Gomez Gutierrez, Edgar Macias Garcia, “<b>Methods And Apparatus To Facilitate Autonomous Navigation Of Robotic Devices</b>”, 2022. <br>Published as: 
@@ -169,33 +182,30 @@
       </div>
       </div>
       <br><br>
-      <h1  class="tittle">
-         <center>Filed patent applications</center>
-      </h1>
+      <h2  class="tittle">
+         <center>Patent applications</center>
+      </h2>
       <br><br>
       <div class="container">
          <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                <div class="pub_list">
-                  <p> Parra Vilchis, Jose, ;Rafael De La Guardia Gonzalez, ; Rodrigo Aldana-López, ; David Gomez Gutierrez, ; Leobardo Campos Macias, “<b>Contextual Memory Map Representation For 3d Reconstruction. </b>”. <i>Patent application US2020027262 (A1)</i>, 2021 United States. Also published as WO2021061241 (A1)<br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=0&ND=3&adjacent=true&locale=en_EP&FT=D&date=20210401&CC=WO&NR=2021061241A1&KC=A1">Espacenet link</a>]
-                  </p>
+<ol>
+                  <li><p align="justify">David Gomez Gutierrez, Jose Parra Vilchis, Rafael De La Guardia Gonzalez, <b>Rodrigo Aldana-López</b>, Leobardo Campos Macias, “<b>Dynamic generation of restricted flight zones for drones</b>”, 2021. <br>Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=3&ND=3&adjacent=true&locale=en_EP&FT=D&date=20210204&CC=US&NR=2021034078A1&KC=A1">US2021034078 (A1)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190704&DB=&locale=en_EP&CC=WO&NR=2019132898A1&KC=A1&ND=4">WO2019132898 (A1)</a>,
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20200514&DB=&locale=en_EP&CC=WO&NR=2019132898A8&KC=A8&ND=4">WO2019132898 (A8)</a>.
+                  </p></li>
                   <br>
-                  <p> David Gomez Gutierrez, ; Parra Vilchis, Jose, ; Rafael De La Guardia Gonzalez, ; Rodrigo Aldana-López, ; Leobardo Campos Macias, “<b>Dynamic Generation Of Restricted Flight Zones For Drones. </b>”. <i>Patent application US2021034078 (A1)</i>, 2021 United States. Also published as WO2019132898 (A1), WO2019132898 (A8)  <br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=1&ND=3&adjacent=true&locale=en_EP&FT=D&date=20210204&CC=US&NR=2021034078A1&KC=A1">Espacenet link</a>]
-                  </p>
+                  <li><p align="justify">Feng ZXue, Mustafa Akdeniz, Seong-youp JohnSuh, Jingwen Bai, Shu-pingYeh, , <b>Rodrigo Aldana-López</b>, Eduardo Alban, , David Arditti Ilitzky, Philippe Auzas, Jonathan Byrne, Leobardo Campos Macias, Mark Davis, Rafael De La Guardia Gonzalez, David Gomez Gutierrez, Timo Huusari, Bradley Alan Jackson, Ranganadh Karella, Sreenivas Kasturi, Mengkun Ke, Ching-yu Liao, Tiefeng Shi, Shilpa Talwar, Daniel Tong, Candy Yiu, “<b>Unmanned Aerial Vehicle Communication</b>”, 2020. <br>Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=1&ND=3&adjacent=true&locale=en_EP&FT=D&date=20220303&CC=US&NR=2022069876A1&KC=A1">US2022069876 (A1)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20200604&DB=&locale=en_EP&CC=WO&NR=2020113062A1&KC=A1&ND=4">WO2020113062 (A1)</a>.
+                  </p></li>
                   <br>
-                  <p>ZXue, Feng, ; Akdeniz, Mustafa, ; Suh, Seong-youp John, ; Bai, Jingwen, ; Yeh, Shu-ping, ; Rodrigo Aldana-López, ; Alban, Eduardo, ; Arditti Ilitzky, David, ; Auzas, Philippe, ; Byrne, Jonathan, ; Leobardo Campos Macias, ; Davis, Mark, ; Rafael De La Guardia Gonzalez, ; David Gomez Gutierrez, ; Huusari, Timo, ; Jackson, Bradley Alan, ; Karella, Ranganadh, ; Kasturi, Sreenivas, ; Ke, Mengkun, ; Liao, Ching-yu, ; Shi, Tiefeng, ; Talwar, Shilpa, ; Tong, Daniel, ; Yiu, Candy, “<b>Unmanned Aerial Vehicle Communication. </b>”. <i>Patent application WO2020113062 (A1)</i>, 2020 World Intellectual Property Organization. Also published as DE102020105045 (A1)  <br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=6&ND=3&adjacent=true&locale=en_EP&FT=D&date=20200604&CC=WO&NR=2020113062A1&KC=A1">Espacenet link</a>]
-                  </p>
-                  <br>
-                  <p>Cavalcanti, Dave, ; Gómez Gutiérrez, David, ; Leobardo Campos Macias, ; Osuna Ibarra, Linda Patricia, ; Rodrigo Aldana-López, ; Arditti Ilitzky, David, ; Caballero Barragan, Humberto, “<b>Wireless Feedback Control Loops With Neural Networks To Predict Target System States. </b>”. <i>Patent application US2019332918 (A1)</i>, 2020 United States. Also published as EP3757687 (A1)  <br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=6&ND=3&adjacent=true&locale=en_EP&FT=D&date=20200604&CC=WO&NR=2020113062A1&KC=A1">Espacenet link</a>]
-                  </p>
-                  <br>
-                  <p>Rodrigo Aldana-López, ; Campos Macías, Leobardo Emmanuel, ; Zamora Esquivel, Julio Cesar, ; Cruz Vargas, Jesús Adán, ; Gómez Gutiérrez, David, “<b>Methods And Apparatus For Training A Neural Network </b>”. <i>Patent application US2019095794 (A1)</i>, 2020 United States. Also published as EP3757687 (A1)  <br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=8&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201230&CC=EP&NR=3757687A1&KC=A1">Espacenet link</a>]
-                  </p>
+                  <li><p align="justify">Dave Cavalcanti, David Gómez Gutiérrez, Leobardo Campos Macias, Linda Patricia Osuna Ibarra, <b>Rodrigo Aldana-López</b>, David Arditti Ilitzky, Humberto Caballero Barragan, “<b>Wireless Feedback Control Loops With Neural Networks To Predict Target System States</b>”, 2020. <br>Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=6&ND=3&adjacent=true&locale=en_EP&FT=D&date=20200604&CC=WO&NR=2020113062A1&KC=A1">WO2020113062 (A1)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20220303&DB=&locale=en_EP&CC=US&NR=2022069876A1&KC=A1&ND=4">US2022069876 (A1)</a>.
+                  </p></li>
                   <br>
                </div>
             </div>
