--- a/patents.html
+++ b/patents.html
@@ -202,9 +202,10 @@
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20200604&DB=&locale=en_EP&CC=WO&NR=2020113062A1&KC=A1&ND=4">WO2020113062 (A1)</a>.
                   </p></li>
                   <br>
-                  <li><p align="justify">Dave Cavalcanti, David Gómez Gutiérrez, Leobardo Campos Macias, Linda Patricia Osuna Ibarra, <b>Rodrigo Aldana-López</b>, David Arditti Ilitzky, Humberto Caballero Barragan, “<b>Wireless feedback control loops with neural networks to predict target system states</b>”, 2020. <br>Published as: 
-<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=6&ND=3&adjacent=true&locale=en_EP&FT=D&date=20200604&CC=WO&NR=2020113062A1&KC=A1">WO2020113062 (A1)</a>, 
-<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20220303&DB=&locale=en_EP&CC=US&NR=2022069876A1&KC=A1&ND=4">US2022069876 (A1)</a>.
+                  <li><p align="justify">Dave Cavalcanti, David Gómez Gutiérrez, Leobardo Campos Macias, Linda Patricia Osuna Ibarra, <b>Rodrigo Aldana-López</b>, David Arditti Ilitzky, Humberto Caballero Barragan, “<b>Wireless feedback control loops with neural networks to predict target system states</b>”, 2023. <br>Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20230110&DB=&locale=en_EP&CC=US&NR=11551058B2&KC=B2&ND=4">US11551058 (B2)</a>, 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=8&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201230&CC=EP&NR=3757687A1&KC=A1">EP3757687 (A1)</a>,
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20191031&DB=&locale=en_EP&CC=US&NR=2019332918A1&KC=A1&ND=4">US2019332918 (A1)</a>.
                   </p></li>
                   <br>
                </div>
