--- a/patents.html
+++ b/patents.html
@@ -60,12 +60,6 @@
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20191031&DB=&locale=en_EP&CC=US&NR=2019332918A1&KC=A1&ND=4">US2019332918 (A1)</a>.
                   </p></li>
 				  <br>
-                  <li><p align="justify"><p><b>Rodrigo Aldana-López</b>, Leobardo Emmanuel Campos Macías, Julio Cesar Zamora Esquivel, Jesús Adán Cruz Vargas, David Gómez Gutiérrez, “<b>Methods And Apparatus For Training A Neural Network </b>”, 2023. Published as: 
-<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20230110&DB=&locale=en_EP&CC=US&NR=11551058B2&KC=B2&ND=4">US11551058 (B2)</a>, 
-<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=8&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201230&CC=EP&NR=3757687A1&KC=A1">EP3757687 (A1)</a>,
-<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20191031&DB=&locale=en_EP&CC=US&NR=2019332918A1&KC=A1&ND=4">US2019332918 (A1)</a>.
-                  </p></li>
-				  <br>
                   <li><p align="justify"> Jose Parra Vilchis, Rafael De La Guardia Gonzalez, <b>Rodrigo Aldana-López</b>, David Gomez Gutierrez, Leobardo Campos Macias, “<b>Architecture for contextual memories in map representation for 3D reconstruction and navigation</b>”, 2022. <br>Published as: 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20220201&DB=&locale=en_EP&CC=US&NR=11238641B2&KC=B2&ND=4">US11238641 (B2)</a>, 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=0&ND=3&adjacent=true&locale=en_EP&FT=D&date=20220728&CC=DE&NR=112020004577T5&KC=T5">DE112020004577 (T5)</a>, 
@@ -208,6 +202,9 @@
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20200604&DB=&locale=en_EP&CC=WO&NR=2020113062A1&KC=A1&ND=4">WO2020113062 (A1)</a>.
                   </p></li>
                   <br>
+                  <li><p align="justify"><p><b>Rodrigo Aldana-López</b>, Leobardo Emmanuel Campos Macías, Julio Cesar Zamora Esquivel, Jesús Adán Cruz Vargas, David Gómez Gutiérrez, “<b>Methods And Apparatus For Training A Neural Network </b>”, 2019. <br>Published as: 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=17&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190328&CC=US&NR=2019095794A1&KC=A1">US2019095794 (A1)</a>.
+                  </p></li>
                </div>
             </div>
          </div>
