--- a/patents.html
+++ b/patents.html
@@ -63,7 +63,8 @@
                   <li><p align="justify"> Jose Parra Vilchis, Rafael De La Guardia Gonzalez, <b>Rodrigo Aldana-López</b>, David Gomez Gutierrez, Leobardo Campos Macias, “<b>Architecture for contextual memories in map representation for 3D reconstruction and navigation</b>”, 2022. <br>Published as: 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20220201&DB=&locale=en_EP&CC=US&NR=11238641B2&KC=B2&ND=4">US11238641 (B2)</a>, 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=0&ND=3&adjacent=true&locale=en_EP&FT=D&date=20220728&CC=DE&NR=112020004577T5&KC=T5">DE112020004577 (T5)</a>, 
-<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20190718&DB=&locale=en_EP&CC=US&NR=2019220020A1&KC=A1&ND=4">US2020027262 (A1)</a>. 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20200123&DB=&locale=en_EP&CC=US&NR=2020027262A1&KC=A1&ND=4">US2020027262 (A1)</a>,
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20210401&DB=&locale=en_EP&CC=WO&NR=2021061241A1&KC=A1&ND=4">WO2021061241 (A1)</a>. 
                   </p></li>
                   <br>
                   <li><p align="justify"> Leobardo Campos Macias, <b>Rodrigo Aldana Lopez</b>, Rafael De La Guardia Gonzalez, David Gomez Gutierrez, Jose Parra Vilchis, “<b>Methods and apparatus for dynamically routing robots based on exploratory on-board mapping</b>”, 2022. <br>Published as: 
