--- a/patents.html
+++ b/patents.html
@@ -70,8 +70,7 @@
                   <li><p align="justify"> Leobardo Campos Macias, <b>Rodrigo Aldana Lopez</b>, Rafael De La Guardia Gonzalez, David Gomez Gutierrez, Jose Parra Vilchis, “<b>Methods and apparatus for dynamically routing robots based on exploratory on-board mapping</b>”, 2022. <br>Published as: 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/originalDocument?FT=D&date=20220426&DB=&locale=en_EP&CC=US&NR=11314254B2&KC=B2&ND=4">US11314254 (B2)</a>, 
 <a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=6&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201001&CC=DE&NR=102020104358A1&KC=A1">DE102020104358 (A1)</a>, 
-<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=0&ND=3&adjacent=true&locale=en_EP&FT=D&date=20220728&CC=DE&NR=112020004577T5&KC=T5">US2019220020 (A1)</a>,
-<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=0&ND=3&adjacent=true&locale=en_EP&FT=D&date=20220728&CC=DE&NR=112020004577T5&KC=T5">WO2021061241 (A1)</a>. 
+<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=6&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201001&CC=DE&NR=102020104358A1&KC=A1">US2019220020 (A1)</a>.
                   </p></li>
                   <br>
                   <li><p align="justify">Julio Zamora Esquivel, <b>Rodrigo Aldana Lopez</b> Leobardo Campos Macias, Jesus Cruz Vargas, Rafael De La Guardia Gonzalez, David Gomez Gutierrez, Edgar Macias Garcia, “<b>Methods and apparatus to facilitate autonomous navigation of robotic devices</b>”, 2022. <br>Published as: 
